# grasshopper

./: .gitignore  CMakeLists.txt  COPYRIGHT  GNUmakefile  README.md  ReleaseNotes.md  awkoutt.txt  default.gdml  grasshopper.cc  md5out.txt  test_grasshopper.sh  vis.mac
analysis_and_API/API/ASTAR/: astar_api.py
analysis_and_API/API/ESTAR/: config.json  estar_api.py
analysis_and_API/API/PSTAR/: config.json  pstar_api.py
analysis_and_API/API/XCOM/: xcom_api.py
analysis_and_API/CLI/cli_funcs/: OutputProcessor.py  RunSim.py
analysis_and_API/post_process/: output_autoprocess.py
analysis_and_API/post_process/post_process_funcs/: OutputProcessor.py
analysis_and_API/pre_process/: neutron.gdml  preprocess.py
docs/: conf.py  index.rst  license.rst  publications.rst  requirements-rtd.txt
docs/_build/doctrees/: environment.pickle  index.doctree  license.doctree  publications.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  license.html  objects.inv  publications.html  search.html  searchindex.js
docs/_static/: gettingstarted.rst
docs/_templates/: index.rst
docs/devguide/: index.rst
docs/examples/: index.rst
docs/io_formats/: index.rst
docs/methods/: index.rst
docs/source/: conf.py  index.rst  license.rst  publications.rst
docs/source/devguide/: index.rst
docs/source/getting_started/: index.rst
docs/source/io_formats/: index.rst
docs/source/methods/: index.rst
docs/source/pythonapi/: index.rst
docs/source/releasenotes/: index.rst
docs/source/usersguide/: index.rst
documentation/: default.gdml  input_template.gdml
exec/: G4History.macro  default.gdml  grass_batch.sh  input_spectrum.txt  stitch.sh
exec/22.033/: input_spectrum.txt  soilMoistureRev1.gdml
exec/22.09/Comtpon/: Compton.gdml
exec/22.09/alpha/: alpha.gdml
exec/22.09/beta/: beta.gdml  beta_lite.gdml  g4_00.wrl
exec/22.09/gamma/: gamma.gdml
exec/22.09/neutron/: .fuse_hidden0000002100000001
exec/Lanthern/: container.gdml
exec/benchmarking/: awkoutt.txt  beta_lite.gdml  md5out.txt
exec/bremsstrahlung/: brem_Au_2.5MeV_new.gdml  brem_W_6MeV.txt
exec/muons/: 2paddle.gdml
exec/nrad/: pit_reciprocal.gdml
exec/photoneutron/: input_spectrum.txt
exec/plotting_with_python/: grasshopper_analysis.ipynb  pyroot_example.ipynb
exec/unit_test/: awkout.txt  beta_lite.gdml  gamma.gdml  md5out.txt  test3He.gdml  unit_test.sh
gui/: README.md  grasshopper_gui.py  grasshopper_gui_novisualization.py  grasshopper_gui_settings.json  grasshopper_vtk_viewer.py  requirements.txt
include/: Analysis.hh  AnalysisManager.hh  DetectorConstruction.hh  EventAction.hh  EventActionMessenger.hh  MySession.hh  PhysicsList.hh  PhysicsListLowEnergy.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  VisManager.hh
src/: Analysis.cc  AnalysisManager.cc  DADEphysicsList.cc  DMXPhysicsList.cc  EventAction.cc  EventActionMessenger.cc  GammaNuclearPhysics.cc  MySession.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc  VisManager.cc
src/CLI/: grasshopper_cli.py
src/post_process/: GrasshopperScript.py  grasshopper_post.sh  output_autoprocess.py
src/pre_process/: g4_00.wrl  g4_01.wrl  grasshopper_pre.sh
(+193 files in other folders)
